add update login view

--- a/src/LetzFly/Views/Account/Register.cshtml
+++ b/src/LetzFly/Views/Account/Register.cshtml
@@ -36,13 +36,13 @@
             </tr>
             <tr></tr>
             <tr></tr>
-
             <tr>
                 <td><input type="submit" value="Register" class="btn btn-primary" /></td>
             </tr>
         </table>
         <h4 class="redFont">**Note** Password requires at least 6 characters including a capital letter, a digit, and a special character.</h4>
         <br />
-        <div asp-validation-summary="All"></div>
-    }
+        <h4 class="redFont">All fields are required</h4>
+            
+     }
 </div>
