add update to password input fields to be secure & add secure success login index

--- a/src/LetzFly/Views/Account/Login.cshtml
+++ b/src/LetzFly/Views/Account/Login.cshtml
@@ -20,7 +20,7 @@
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.Password)</td>
-                <td>@Html.TextBoxFor(m => m.Password)</td>
+                <td>@Html.PasswordFor(m => m.Password)</td>
             </tr>
             <tr></tr>
             <tr></tr>
