--- a/src/LetzFly/Views/Account/Register.cshtml
+++ b/src/LetzFly/Views/Account/Register.cshtml
@@ -28,11 +28,11 @@
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.Password)</td>
-                <td>@Html.TextBoxFor(m => m.Password)</td>
+                <td>@Html.PasswordFor(m => m.Password)</td>
             </tr>
             <tr>
                 <td>@Html.LabelFor(m => m.ConfirmPassword)</td>
-                <td>@Html.TextBoxFor(m => m.ConfirmPassword)</td>
+                <td>@Html.PasswordFor(m => m.ConfirmPassword)</td>
             </tr>
             <tr></tr>
             <tr></tr>
