--- a/src/LetzFly/Views/Account/Index.cshtml
+++ b/src/LetzFly/Views/Account/Index.cshtml
@@ -3,8 +3,29 @@
 *@
 @{
 }
-@using System.Security.Claims
+<div class="container">
+    @using System.Security.Claims
 
-<div>
-    
+    <h2>Welcome</h2>
+    <hr />
+
+    @if (User.Identity.IsAuthenticated)
+    {
+        <h3>Hello @User.Identity.Name </h3>
+
+        @*<h4>@Html.ActionLink("Marketing Page", "Marketing")</h4>*@
+
+        @using (Html.BeginForm("LogOff", "Admin"))
+        {
+            <input type="submit" class="btn btn-success" value="Log out" />
+
+        }
+    }
+    else
+    {
+        <p>@Html.ActionLink("Register", "Register")</p>
+        <p>@Html.ActionLink("Log in", "Login")</p>
+
+    }
+
 </div>
