add fixed register error

--- a/src/LetzFly/Views/Account/Login.cshtml
+++ b/src/LetzFly/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
     <h2>Login</h2>
     <hr />
 
-    @using (Html.BeginForm("Login", "User", FormMethod.Post))
+    @using (Html.BeginForm())
     {
         <table>
             <tr>
