--- a/src/LetzFly/Views/Account/Register.cshtml
+++ b/src/LetzFly/Views/Account/Register.cshtml
@@ -11,7 +11,7 @@
     <h2>Register a new User</h2>
     <hr />
 
-    @using (Html.BeginForm("Register", "User", FormMethod.Post))
+    @using (Html.BeginForm("Register", "Account", FormMethod.Post))
     {
         <table>
             <tr>
