--- a/src/LetzFly/Views/Account/Index.cshtml
+++ b/src/LetzFly/Views/Account/Index.cshtml
@@ -15,7 +15,7 @@
 
         @*<h4>@Html.ActionLink("Marketing Page", "Marketing")</h4>*@
 
-        @using (Html.BeginForm("LogOff", "Admin"))
+        @using (Html.BeginForm("LogOff", "Account"))
         {
             <input type="submit" class="btn btn-success" value="Log out" />
 
